icon tab bar add list
list is added in icon tab bar and some css changing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>Test App</title>
+    <title>RAK Records Management</title>
     <script
             src="https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js"
         id="sap-ui-bootstrap"
